--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    dasfpasodkfpoksd
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
