elementy hlavičky navigace

--- a/index.html
+++ b/index.html
@@ -5,17 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styly/reset.css" type="text/css">
-    <title>Document</title>
+    <title>Hlavní stránka</title>
 </head>
 <body>
     <header>
-
+        <nav>
+            <div class="nav-container">
+                <div class="logo">
+                    <h3>Pojištění APP</h3>
+                </div>
+                <ul class="navigace">
+                    <li><a href="#">Pojištěnci</a></li>
+                    <li><a href="#">Pojištění</a></li>
+                    <li><a href="#">Události</a></li>
+                    <li><a href="#">O aplikaci...</a></li>
+                </ul>
+                <div class="prihlaseni">
+                    <a href="#">Přihlásit</a>
+                    <a href="#">Registrovat</a>
+                </div>
+            </div>
+        </nav>
     </header>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
 </html>
