přidáno logo pojištění

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styly/reset.css" type="text/css" />
-    <link rel="icon" href="/icon/pojisteni.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="/icon/pojisteni.ico" />
     <title>Hlavní stránka</title>
 </head>
 <body>
@@ -13,6 +13,7 @@
         <nav>
             <div class="nav-container">
                 <div class="logo">
+                    <img src="imgs/logo-pojisteni.svg" alt="logo pojištění" />
                     <h3>Pojištění APP</h3>
                 </div>
                 <ul class="navigace">
