přidán media queries

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="imgs/logo-pojisteni.svg" alt="logo pojištění" />
-                    <h3>Pojištění APP</h3>
+                    <h3>Pojištění&nbsp;APP</h3>
                 </div>
                 <ul class="navigace">
                     <li><a href="#">Pojištěnci</a></li>
                     <li><a href="#">Pojištění</a></li>
                     <li><a href="#">Události</a></li>
-                    <li><a href="#">O aplikaci...</a></li>
+                    <li><a href="#">O&nbsp;aplikaci...</a></li>
                 </ul>
                 <div class="prihlaseni">
                     <a href="#">Přihlásit</a>
