logo předěláno na odkaz

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <div class="nav-container">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <img src="imgs/logo-pojisteni.svg" alt="logo pojištění" />
                     <h3>Pojištění&nbsp;APP</h3>
-                </div>
+                </a>
                 <ul class="navigace">
                     <li><a href="#">Pojištěnci</a></li>
                     <li><a href="#">Pojištění</a></li>
