rozložení section a footer

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section id="body-content">
 
     </section>
     <footer>
-
+        
     </footer>
 </body>
 </html>
