--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <article>
             <h2>Pojištěnci</h2>
             <div class="con-pojistenci">
-
+                <!--Zde se bude vypisovat tabulka s pojištěnci-->
             </div>
         </article>
         <article>
             <h2>Nový pojištěnec</h2>
-            <form action="novy-pojistenec">
+            <form action="novy-pojistenec" class="formular">
                 <div class="form-group">
                     <label for="Jméno" class="nazev">Jméno</label>
                     <input type="text" id="input-jmeno" placeholder="Jan" />
