--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styly/reset.css" type="text/css" />
     <link rel="stylesheet" href="styly/zakladni_body.css" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="/icon/pojisteni.ico" />
+    <script src="/scripty/main.js" type="module" defer></script>
     <title>Hlavní stránka</title>
 </head>
 <body>
