--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="body-content">
         <article>
             <h2>Pojištěnci</h2>
-            <div class="con-pojistenci">
+            <div id="cont_pojistenci">
                 <!--Zde se bude vypisovat tabulka s pojištěnci-->
             </div>
         </article>
