přidána validace tel. čísla

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <label for="Věk" class="nazev">Věk</label>
-                    <input type="text" id="input-vek" placeholder="31" />
+                    <input type="date" id="input-vek" placeholder="31" />
                 </div>
                 <div class="form-group">
                     <label for="Telefon" class="nazev">Telefon</label>
