--- a/index.html
+++ b/index.html
@@ -43,18 +43,22 @@
                 <div class="form-group">
                     <label for="Jméno" class="nazev">Jméno</label>
                     <input type="text" id="input-jmeno" placeholder="Jan" />
+                    <span id="val-jmeno"></span>
                 </div>
                 <div class="form-group">
                     <label for="Přijmení" class="nazev">Přijmení</label>
                     <input type="text" id="input-prijmeni" placeholder="Novák" />
+                    <span id="val-prijmeni"></span>
                 </div>
                 <div class="form-group">
                     <label for="Věk" class="nazev">Věk</label>
                     <input type="date" id="input-vek" placeholder="31" />
+                    <span id="val-vek"></span>
                 </div>
                 <div class="form-group">
                     <label for="Telefon" class="nazev">Telefon</label>
                     <input type="text" id="input-telefon" placeholder="123 456 789" />
+                    <span id="val-telefon"></span>
                 </div>
                 <div class="form-group">
                     <button type="button" id="btn-ulozit">Uložit</button>
