--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <span id="val-prijmeni"></span>
                 </div>
                 <div class="form-group">
-                    <label for="Věk" class="nazev">Věk</label>
-                    <input type="date" id="input-vek" placeholder="31" />
+                    <label for="Věk" class="nazev">Datum narození</label>
+                    <input type="date" id="input-vek" />
                     <span id="val-vek"></span>
                 </div>
                 <div class="form-group">
